# Rustacean-launcher

./: .gitignore  Cargo.toml  README.md  launcher_config.json  launcher_profiles.json
core/: Cargo.toml
core/src/: lib.rs
core/src/downloader/: download_structs.rs  downloader.rs
core/src/launcher/: launcher.rs  launcher_config.rs
core/src/tasks/: tasks.rs
core/src/user/: mod.rs  offline_user.rs
core/src/users/: mod.rs  user.rs
core/src/versions/: assets.rs  downloader.rs  libraries.rs  manifest.rs  mod.rs  verifier.rs  version.rs  version_json.rs  version_manager.rs
launcher/: Cargo.toml
launcher/src/: main.rs
launcher/src/tui/: app.rs  tabs.rs  theme.rs
launcher/src/tui/tabs/: about_tab.rs  config_tab.rs  launch_tab.rs
src/: lib.rs  main.rs
src/command/: command.rs
src/command/commands/: launch.rs  mod.rs  version_manager.rs
src/core/: mod.rs
src/core/downloader/: download_structs.rs  downloader.rs  mod.rs
src/core/launcher/: launcher.rs  launcher_config.rs  mod.rs
src/core/user/: offline_user.rs  user.rs
src/core/versions/: assets.rs  downloader.rs  libraries.rs  manifest.rs  mod.rs  verifier.rs  version.rs  version_manager.rs
src/tui/: app.rs  mod.rs
src/tui/tabs/: about_tab.rs  config_tab.rs  launch_tab.rs
