[package]
name = "rustacean_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "=1.0.1"

reqwest = { version = "0.12.9", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
futures-util = "^0.3.28"
futures-macro = "=0.3.31"

ratatui = { version="0.29.0" }
tui-widget-list = "0.13.2"
color-eyre = "0.6.3"
env_logger = "0.11.6"

[dev-dependencies]

[profile.dev]
incremental = true
