[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "=1.0.1"

reqwest = { version = "0.12.9", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
futures-util = "^0.3.28"
futures-macro = "=0.3.31"
log = "0.4.25"
env_logger = "0.11.6"
