[package]
name = "rustacean_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]

core = { path = "../core" }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
ratatui = { version="0.29.0" }
tui-widget-list = "0.13.2"
color-eyre = "0.6.3"
env_logger = "0.11.6"
